--- a/start/main/templates/main/index/index.html
+++ b/start/main/templates/main/index/index.html
@@ -14,7 +14,7 @@
                 </div>
             {% endfor %}
         {% else %}
-            <p>Дождитесь назначения точки от админа</p>
+            <p>Пусто</p>
         {% endif %}
     </div>
 {% endblock content %}
