--- a/start/main/templates/main/register/register.html
+++ b/start/main/templates/main/register/register.html
@@ -19,7 +19,11 @@
             </div>
             {% if form.non_field_errors %}<div class="text-danger">{{ form.non_field_errors }}</div>{% endif %}
             
-            <button type="submit" style="margin-top: 10px;">Назначить</button>
+            <button type="submit" class="btn btn-primary" style="margin-top: 10px;">Зарегистрироваться</button>
         </form>
+        <div class="mt-3">
+            <span>Уже есть аккаунт?</span>
+            <a href="{% url 'main:login' %}" class="btn btn-sm btn-outline-secondary">Войти</a>
+        </div>
     </div>
 {% endblock content %}
