--- a/start/main/templates/main/schedule/schedule.html
+++ b/start/main/templates/main/schedule/schedule.html
@@ -10,6 +10,7 @@
     <a href="{% url 'main:schedule' shop.slug next_year next_month %}" class="btn btn-sm btn-outline-primary">Следующий &gt;</a>
     <button id="goTodayBtn" class="btn btn-sm btn-secondary" type="button">Сегодня</button>
 </div>
+<div class="schedule-container">
 <table border="1" class="table table-bordered" id="scheduleTable" data-shop-id="{{ shop.id }}" data-min-workers="{{ min_workers }}" data-shop-code="{{ shop.short_code }}">
     <thead>
         <tr>
@@ -57,6 +58,7 @@
         {% endfor %}
     </tbody>
 </table>
+</div>
 
 {% if role == 'WORKER' and my_future_shifts %}
     <div class="mt-3">
